2006-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* config/Makefile.am: Add comment to force updated Makefile.in.

	* lib/freeze.mk: Fix typo in comment.  Unlike the last, white
	space only patch to this file, this patch causes the Makefile.in
	files that include freeze.mk to be updated, and thus have a
	newer time stamp again, which in turn makes a pristine CVS
	checkout have correct time stamps.

	* Makefile.maint (cvs-sv): New macro, to be used..
	(config.guess-url_prefix, config.sub-url_prefix)
	(texinfo.tex-url_prefix, standards.texi-url_prefix): ..here;
	point to CVS text checkout of Gnulib files.
	(copyright-check): Bump current year.
	(announcement): Do not hard-wire `./announce-gen'.
	(cvs-update): Propagate failures of `cvs' and `move-if-change'
	correctly.
	* Makefile.cfg (executable-update): Use `chmod a+x' instead of
	`chmod +x'.
	(wget_files): Update config.guess, config.sub, texinfo.tex by
	`wget-update', now that their URLs work again.

2006-04-10  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Particular Types): Don't use AC_CHECK_TYPE.
	Problem noted by Paul D. Smith.

2006-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi: Remove unused words from word list.
	* .x-sc_prohibit_atoi_atof, .x-sc_space_tab, .x-sc_sun_os_names,
	.x-sc_trailing_space: New files.

	* doc/standards.texi: Sync from gnulib.

	* NEWS, doc/autoconf.texi (AC_LIBOBJ vs LIBOBJS): Mark
	`LIBOBJDIR' as experimental.

	* lib/m4sugar/m4sh.m4 (_AS_LN_S_PREPARE): MSYS `ln -s' fails
	with a target directory; it's internally implemented as `cp'
	anyway, but since Autoconf advertises the possibility to use
	a target directory when LN_S is `ln -s', we need to find out.
	Reported by Rolf Ebert <rolf.ebert.gcc@gmx.de> against MSYS,
	analyzed by Keith Marshall <keith.marshall@total.com>.

	* THANKS: Update.

2006-04-10  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Just output